force-app/main/default/objects/Metadata_Usage__c/Metadata_Usage__c.object-meta.xml
<CustomObject>
    <label>Metadata Usage</label>
    <nameField>
        <displayFormat>MU-{00000}</displayFormat>
        <label>Metadata Usage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Usages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>