force-app/main/default/objects/Metadata_Usage__c/fields/Context_Snippet__c.field-meta.xml
<CustomField>
    <fullName>Context_Snippet__c</fullName>
    <label>Context Snippet</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>