force-app/main/default/objects/Metadata_Usage__c/fields/Last_Analyzed_On__c.field-meta.xml
<CustomField>
    <fullName>Last_Analyzed_On__c</fullName>
    <label>Last Analyzed On</label>
    <type>DateTime</type>
</CustomField>