force-app/main/default/objects/Metadata_Usage__c/fields/Match_Text__c.field-meta.xml
<CustomField>
    <fullName>Match_Text__c</fullName>
    <label>Match Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>