force-app/main/default/objects/Metadata_Usage__c/fields/Source_Key__c.field-meta.xml
<CustomField>
    <fullName>Source_Key__c</fullName>
    <label>Source Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>