force-app/main/default/objects/Metadata_Usage__c/fields/Source_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Source_Metadata__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Metadata</label>
    <referenceTo>Metadata_Item__c</referenceTo>
    <relationshipLabel>Metadata Usages</relationshipLabel>
    <relationshipName>Metadata_Usages</relationshipName>
    <type>Lookup</type>
</CustomField>