force-app/main/default/objects/Metadata_Usage__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <label>Source Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>