force-app/main/default/objects/Metadata_Usage__c/fields/Target_Key__c.field-meta.xml
<CustomField>
    <fullName>Target_Key__c</fullName>
    <label>Target Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>