force-app/main/default/objects/Metadata_Usage__c/fields/Target_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Target_Metadata__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Metadata</label>
    <referenceTo>Metadata_Item__c</referenceTo>
    <relationshipLabel>Metadata Usages (Target Metadata)</relationshipLabel>
    <relationshipName>TargetUsages</relationshipName>
    <type>Lookup</type>
</CustomField>