force-app/main/default/objects/Metadata_Usage__c/fields/Target_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Type__c</fullName>
    <label>Target Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>