force-app/main/default/objects/Metadata_Usage__c/fields/Usage_Key__c.field-meta.xml
<CustomField>
    <fullName>Usage_Key__c</fullName>
    <externalId>true</externalId>
    <label>Usage Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>