force-app/main/default/objects/Metadata_Usage__c/fields/Usage_Type__c.field-meta.xml
<CustomField>
    <fullName>Usage_Type__c</fullName>
    <label>Usage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UsesField</fullName>
            </value>
            <value>
                <fullName>UsesObject</fullName>
            </value>
            <value>
                <fullName>InvokesFlow</fullName>
            </value>
            <value>
                <fullName>ReferencesApex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>